Alterando os indices de remover e adicionar música